--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ body {
 	  <div id="logo">
 	<img src="breeze logo.png" alt="breeze logo" width="150" height="150" class="center"></div>
     <nav> 
-		<a href="Breeze Main Page.html" title="Link">Home&emsp;|&nbsp;</a>
-		<a href="Breeze About Page.html" title="Link">About&emsp;|&nbsp;</a> 
-		<a href="Breeze Shop Page.html" title="Link">Shop&emsp;|&nbsp;</a>
-		<a href="Breeze Book Online Page.html" title="Link">Book Online&emsp;|&nbsp;</a> 
-		<a href="Breeze Contact Page.html" title="Link">Contact</a> 
+		<a href="index.html" title="Link">Home&emsp;|&nbsp;</a>
+		<a href="Breeze_About_Page.html" title="Link">About&emsp;|&nbsp;</a> 
+		<a href="Breeze_Shop_Page.html" title="Link">Shop&emsp;|&nbsp;</a>
+		<a href="Breeze_Book_Online_Page.html" title="Link">Book Online&emsp;|&nbsp;</a> 
+		<a href="Breeze_Contact_Page.html" title="Link">Contact</a> 
 	</nav>
   </header>
   <div id="content">
@@ -37,18 +37,18 @@ body {
     ****************************************************************************-->
       <h1><!-- Blog title --><strong>BREEZE SYSTEMS SDN BHD</strong></h1>
       <h3><strong><!-- Tagline -->WHERE YOUR COMFORT IS OUR RESPONSIBILITY</strong></h3>
-      <div id="bannerImage"><img src="home aircond.jpg" alt="home with airconditioner"/></div>
+      <div id="bannerImage"><img src="home_aircond.jpg" alt="home with airconditioner"/></div>
       <h3><strong><u>VISION</u></strong></h3>
       <p><strong>Breeze Systems Sdn Bhd strives to be the premier air conditioning service provider setting high unmatched standards for all service providers – providing quality, value, and customer satisfaction.</strong></p>
       <h3><strong><u>MISSION</u></strong></h3>
       <p><strong>To deliver superior cooling service with an unmatched client experience, resulting in the highest levels of respect from our community and a rewarding environment for our employees to succeed. Never accepting past performance as good enough: but continuing to strive for new levels of excellence.</strong></p>
-      <br><a href="Breeze About Page.html" title="Link">Read More</a>
+      <br><a href="Breeze_About_Page.html" title="Link">Read More</a>
 	<br><br><br>
 		<video width="600" height="378" autoplay muted class="center2">
-  		<source src="video samsung aircond.mp4" type="video/mp4">
+  		<source src="video_samsung_aircond.mp4" type="video/mp4">
 		</video>
 		<br><br><br>
-		<img src="Photoshop Breeze System.jpg" alt="breeze poster"  width="600" height="600" class="center"> 
+		<img src="Photoshop_Breeze_System.jpg" alt="breeze poster"  width="600" height="600" class="center"> 
 		<br><br><br>
     </section>
 	  
@@ -68,10 +68,10 @@ body {
       <div id="adimage"><img src="office.png" alt="headquarters"/></div>
       <nav>
         <ul>
-          <li><strong><a href="Breeze Shop Page.html" title="Link">SHOP ALL</a></strong></li>
-          <li><a href="Breeze Panasonic Page.html" title="Link">PANASONIC</a></li>
-          <li><a href="Breeze Samsung Page.html" title="Link">SAMSUNG</a></li>
-          <li><a href="Breeze York Page.html" title="Link">YORK</a></li>
+          <li><strong><a href="Breeze_Shop_Page.html" title="Link">SHOP ALL</a></strong></li>
+          <li><a href="Breeze_Panasonic_Page.html" title="Link">PANASONIC</a></li>
+          <li><a href="Breeze_Samsung_Page.html" title="Link">SAMSUNG</a></li>
+          <li><a href="Breeze_York_Page.html" title="Link">YORK</a></li>
         </ul>
       </nav>
     </section>
